# odin_palace

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  release-please-config.json
.github/workflows/: checks.yml  release-please.yml  release.yml
benches/: bench_statement.txt  my_benchmark.rs
src/: anonymizer.rs  main.rs
src/parser/: hooks.rs  mod.rs
src/tests/: mod.rs  run_suites.rs
src/tests/suites/binary/: result.snap
src/tests/suites/empty/: result.snap
src/tests/suites/invalid/: result.snap
src/tests/suites/no_documents/: input.txt  result.snap
src/tests/suites/no_end_of_account/: input.txt  result.snap
src/tests/suites/no_end_of_document/: input.txt  result.snap
src/tests/suites/no_end_of_file/: input.txt
src/tests/suites/one_document/: input.txt  result.snap
src/tests/suites/one_document_utf/: input.txt  result.snap
src/tests/suites/statement-131911/: input.txt  result.snap
src/tests/suites/statement-137442/: result.snap
src/tests/suites/taxdev_4645/: input.txt  result.snap
src/tests/suites/taxdev_4645_utf/: input.txt  result.snap
src/tests/suites/two_accounts/: input.txt  result.snap
src/tests/suites/two_documents/: input.txt  result.snap
src/tests/suites/unknown_direction/: input.txt  result.snap
src/tests/suites/version_1_03/: input.txt  result.snap
