[package]
name = "odin_palace"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"], default-features = false }
clap = { version = "^4.5", features = ["derive"] }
encoding_rs = "0.8"
indexmap = "2.9.0"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
insta = "1.43"
rstest = "0.25.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
